...
            "value" : "Cancel"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anuluj"
          }
        }
      }
    },
    "Categories" : {
      "extractionState" : "manual",
...
            "value" : "Collection"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kolekcja"
          }
        }
      }
    },
    "Collection filter" : {
      "extractionState" : "manual",
...
